generator client {
  provider = "prisma-client-js"
  output   = "../src/generated/prisma"
}

datasource db {
  provider = "postgresql"
}

// --- Enums ---

enum UserRole {
  Customer
  Staff
  Manager
  Admin
}

enum UserStatus {
  Active
  Inactive
  Disabled
}

enum CarStatus {
  Available
  Rented
  Reserved
  Maintenance
  Disabled
}

enum BookingStatus {
  Pending
  Confirmed
  Active
  Completed
  Cancelled
  Deposit_Paid @map("Deposit Paid")
}

enum PaymentStatus {
  Unpaid
  Partially_Paid @map("Partially Paid")
  Paid
  Refunded
}

enum InspectionType {
  Handover
  Return
}

enum ItemStatus {
  OK
  Damaged
  Missing
}

enum TransactionType {
  Payment
  Refund
  Deposit
  Penalty
}

enum PaymentMethod {
  Cash
  Banking
  E_Wallet @map("E-Wallet")
  Wallet
}

enum TransactionStatus {
  Pending
  Success
  Failed
}

enum NotificationType {
  Booking
  Payment
  System
}

// --- Models ---

model User {
  user_id       Int        @id @default(autoincrement())
  username      String     @unique @db.VarChar(50)
  password_hash String     @db.VarChar(255)
  email         String     @unique @db.VarChar(100)
  phone         String?    @db.VarChar(20)
  role          UserRole
  status        UserStatus
  created_at    DateTime   @default(now())
  updated_at    DateTime   @updatedAt

  customer_profile CustomerProfile?
  staff_profile    StaffProfile?
  notifications    Notification[]

  @@map("users")
}

model CustomerProfile {
  user_id        Int     @id
  full_name      String  @db.VarChar(100)
  license_number String? @db.VarChar(50)
  address        String? @db.VarChar(255)
  wallet_balance Decimal @default(0) @db.Decimal(10, 2)

  user      User       @relation(fields: [user_id], references: [user_id], onDelete: Cascade)
  bookings  Booking[]
  feedbacks Feedback[]

  @@map("customer_profiles")
}

model StaffProfile {
  user_id    Int    @id
  staff_code String @unique @db.VarChar(50)

  user        User                @relation(fields: [user_id], references: [user_id], onDelete: Cascade)
  inspections BookingInspection[]

  @@map("staff_profiles")
}

model CarCategory {
  category_id Int     @id @default(autoincrement())
  name        String  @db.VarChar(100)
  description String? @db.Text
  min_price   Decimal @db.Decimal(10, 2)

  cars Car[]

  @@map("car_categories")
}

model Car {
  car_id               Int       @id @default(autoincrement())
  category_id          Int
  name                 String    @db.VarChar(100)
  brand                String    @db.VarChar(50)
  model                String    @db.VarChar(50)
  year                 Int
  color                String    @db.VarChar(50)
  license_plate        String    @unique @db.VarChar(20)
  vin_number           String    @unique @db.VarChar(50)
  status               CarStatus
  rental_price_per_day Decimal   @db.Decimal(10, 2)
  current_mileage      Int
  description          String?   @db.Text
  created_at           DateTime  @default(now())
  updated_at           DateTime  @updatedAt

  category CarCategory @relation(fields: [category_id], references: [category_id])
  images   CarImage[]
  bookings Booking[]

  @@map("cars")
}

model CarImage {
  image_id     Int     @id @default(autoincrement())
  car_id       Int
  image_url    String  @db.VarChar(255)
  is_thumbnail Boolean @default(false)

  car Car @relation(fields: [car_id], references: [car_id], onDelete: Cascade)

  @@map("car_images")
}

model Booking {
  booking_id     Int           @id @default(autoincrement())
  customer_id    Int
  car_id         Int
  start_date     DateTime
  end_date       DateTime
  total_price    Decimal       @db.Decimal(10, 2)
  total_paid     Decimal       @default(0) @db.Decimal(10, 2)
  status         BookingStatus
  payment_status PaymentStatus
  created_at     DateTime      @default(now())
  updated_at     DateTime      @updatedAt

  customer     CustomerProfile     @relation(fields: [customer_id], references: [user_id])
  car          Car                 @relation(fields: [car_id], references: [car_id])
  inspections  BookingInspection[]
  transactions Transaction[]
  feedback     Feedback?

  @@map("bookings")
}

model BookingInspection {
  inspection_id          Int            @id @default(autoincrement())
  booking_id             Int
  staff_id               Int
  type                   InspectionType
  inspection_date        DateTime       @default(now())
  odometer_reading       Int
  fuel_level             Int
  condition_summary      String?        @db.Text
  customer_signature_url String?        @db.VarChar(255)

  booking Booking          @relation(fields: [booking_id], references: [booking_id])
  staff   StaffProfile     @relation(fields: [staff_id], references: [user_id])
  items   InspectionItem[]

  @@map("booking_inspections")
}

model InspectionItem {
  item_id       Int        @id @default(autoincrement())
  inspection_id Int
  item_name     String     @db.VarChar(50)
  status        ItemStatus
  notes         String?    @db.Text
  photo_url     String?    @db.VarChar(255)

  inspection BookingInspection @relation(fields: [inspection_id], references: [inspection_id], onDelete: Cascade)

  @@map("inspection_items")
}

model Transaction {
  transaction_id   Int               @id @default(autoincrement())
  booking_id       Int
  amount           Decimal           @db.Decimal(10, 2)
  type             TransactionType
  payment_method   PaymentMethod
  gateway_txn_id   String?           @db.VarChar(100)
  status           TransactionStatus
  transaction_date DateTime          @default(now())
  notes            String?           @db.Text

  booking Booking @relation(fields: [booking_id], references: [booking_id])

  @@map("transactions")
}

model Feedback {
  feedback_id Int      @id @default(autoincrement())
  booking_id  Int      @unique
  customer_id Int
  rating      Int
  comment     String?  @db.Text
  created_at  DateTime @default(now())

  booking  Booking         @relation(fields: [booking_id], references: [booking_id])
  customer CustomerProfile @relation(fields: [customer_id], references: [user_id])

  @@map("feedbacks")
}

model Notification {
  notification_id Int              @id @default(autoincrement())
  user_id         Int
  title           String           @db.VarChar(100)
  message         String           @db.Text
  type            NotificationType
  is_read         Boolean          @default(false)
  created_at      DateTime         @default(now())

  user User @relation(fields: [user_id], references: [user_id], onDelete: Cascade)

  @@map("notifications")
}
